@@ -126,7 +126,6 @@ this variable."
     (define-key map (kbd "C-c C-c C-u") 'rustic-compile)
     (define-key map (kbd "C-c C-c C-i") 'rustic-recompile)
     (define-key map (kbd "C-c C-c C-o") 'rustic-format-buffer)
-    (define-key map (kbd "C-c C-c C-d") 'rustic-racer-describe)
     (define-key map (kbd "C-c C-c C-,") 'rustic-docstring-dwim)
 
     (define-key map (kbd "C-c C-c C-b") 'rustic-cargo-build)
@@ -213,7 +212,6 @@ This variable might soon be remove again.")
   (require 'rustic-clippy)
   (require 'rustic-comint)
   (require 'rustic-babel)
-  (require 'rustic-racer)
   (require 'rustic-rustfmt)
   (require 'rustic-rustfix)
   (require 'rustic-playground)
