@@ -10,3 +10,4 @@
 - Update rustc to 1.76.0
 - Fix bugs in rustic-cargo-outdated mode in the presence of git
   repositories as dependency.
+- Remove racer integrace since it's development has been discontinued.
